@@ -1,3 +1,9 @@
+2006-04-05  Michael Smith  <msmith@fluendo.com>
+
+	* tests/check/generic/sinks.c: (GST_START_TEST):
+	  Fix a variety of memleaks in sinks check, which are only sometimes 
+	  shown by running the tests under valgrind (weird?).
+
 2006-04-05  Jan Schmidt  <thaytan@mad.scientist.com>
 
 	* docs/version.entities.in:
